--- a/views/LeagueOverview.ejs
+++ b/views/LeagueOverview.ejs
@@ -35,7 +35,7 @@
   </div>
   <div class="tabs-bar">
     <div class="tabs">
-      <a class='tab-head' id='popular'> PLACEMENT </a> 
+      <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
       <a class='tab-head' id='trending'> TRENDING </a>
       <a class='tab-head' id='new' > RESULTS </a>
       <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
