--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+:root {
+  --redbull: color: #fff;
+  --ferrari: color: #FF0000;
+}
+
+
+
 * {
   font-family: 'Titillium Web', sans-serif;
 }
@@ -8,12 +15,21 @@ body {
 
 }
 
-.error-message{
-  color: rgb(255, 17, 0);
+.error-message, 
+.success-message {
   font-size: 20px;
   margin-top: 5px;
   font-weight: bold;
 }
+
+.error-message{
+  color: rgb(255, 17, 0);
+}
+
+.success-message {
+  color: yellowgreen;
+}
+
 
 .flex-body {
   margin: 0px;
@@ -268,7 +284,6 @@ select {
   border-radius: 10px;
   border-width: 1px;
   border-color: rgb(138, 138, 138);
-  background: linear-gradient(navy 60%, transparent 40%);
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -283,7 +298,7 @@ select {
   border-width: 1px;
   border-color: rgb(138, 138, 138);
   background-color: white;
-  margin-bottom: 70px;
+  margin-bottom: 30px;
 }
 
 .badge-header {
