added qualitfication b ets

--- a/views/Index2.ejs
+++ b/views/Index2.ejs
@@ -58,8 +58,8 @@
   <div class="tabs-bar">
     <div class="tabs">
       <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
-      <a class='tab-head' id='trending'> TRENDING </a>
-      <a class='tab-head' id='new' > RESULTS </a>
+      <a class='tab-head' id='trending' href="/qualification"> QUALIFICATION </a>
+      <a class='tab-head' id='new' href="/5050"> 50/50 </a>
       <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
     </div>
   </div>
