--- a/views/Bets.ejs
+++ b/views/Bets.ejs
@@ -7,28 +7,6 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>My Leagues</title>
     <script>
-        function myFunction() {
-          // Declare variables
-          var input, filter, table, tr, td, i, txtValue;
-          input = document.getElementById("myInput");
-          filter = input.value.toUpperCase();
-          table = document.getElementById("myTable");
-          tr = table.getElementsByTagName("tr");
-        
-          // Loop through all table rows, and hide those who don't match the search query
-          for (i = 0; i < tr.length; i++) {
-            td = tr[i].getElementsByTagName("td")[0];
-            if (td) {
-              txtValue = td.textContent || td.innerText;
-              if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                tr[i].style.display = "";
-              } else {
-                tr[i].style.display = "none";
-              }
-            }
-          }
-        }
-
         function getBetStats(bet_id){
             console.log(bet_id)
             fetch('/Bets/BetInfo', {
@@ -100,7 +78,7 @@
             <td>Options</td>
             <th></th>
         </tr>
-        <% for (let i = 0; i < bets.length; i++) { %> 
+        <% for (let i = 0; i < 20; i++) { %> 
             <tr class="table-row">
                 <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- i + 1 %> </td>
                 <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- bets[i].BetName %> </td>
