--- a/views/5050.ejs
+++ b/views/5050.ejs
@@ -52,10 +52,10 @@
   </div>
   <div class="tabs-bar">
     <div class="tabs">
-      <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
-      <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
-      <a class='tab-head' id='new' href="/5050"> 50/50 </a>
-      <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
+        <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
+        <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
+        <a class='tab-head' id='new' href="/5050"> 50/50 </a>
+        <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
     </div>
   </div>
   <div class="bet-box">
@@ -78,36 +78,18 @@
             <td>Options</td>
             <th></th>
         </tr>
-        <% for (let i = 0; i < 20; i++) { %> 
+        <% for (let i = 40; i < 52; i++) { %> 
             <tr class="table-row">
-                <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- i + 1 %> </td>
+                <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- i - 19 %> </td>
                 <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- bets[i].BetName %> </td>
                 <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- bets[i].Category %> </td>
                 <% if (placedBets.indexOf(bets[i].bet_id) < 0) { %> 
                 <form action="/Bets/PlaceBet/<%- bets[i].bet_id %>" method="POST">
                 <td><input id="betAmount" name="betAmount" type="number" placeholder="amount" required></td>
                 <td><select id="driver" name="driver" class="bet-selection" required>
-                    <option value="" disabled selected hidden>Select a Driver</option>
-                    <option value="Max Verstappen">Max Verstappen</option>
-                    <option value="Sergio Perez">Sergio Perez</option>
-                    <option value="Charles Leclerc">Charles Leclerc</option>
-                    <option value="Carlos Sainz">Carlos Sainz</option>
-                    <option value="Lewis Hamilton">Lewis Hamilton</option>
-                    <option value="George Russel">George Russel</option>
-                    <option value="Lando Norris">Lando Norris</option>
-                    <option value="Oscar Piastri">Oscar Piastri</option>
-                    <option value="Pierre Gasly">Pierre Gasly</option>
-                    <option value="Esteban Ocon">Esteban Ocon</option>
-                    <option value="Fernando Alonso">Fernando Alonso</option>
-                    <option value="Lance Stroll">Lance Stroll</option>
-                    <option value="Valteri Bottas">Valteri Bottas</option>
-                    <option value="Zhou Guanyu">Zhou Guanyu</option>
-                    <option value="Kevin Magnussen">Kevin Magnussen</option>
-                    <option value="Nico Hulkenberg">Nico Hulkenberg</option>
-                    <option value="Nick De Vries">Nick De Vries</option>
-                    <option value="Yuki Tsunoda">Yuki Tsunoda</option>
-                    <option value="Alex Albon">Alex Albon</option>
-                    <option value="Logan Sargeant">Logan Sargeant</option>
+                    <option value="" disabled selected hidden>Select Option</option>
+                    <option value="Y">Yes</option>
+                    <option value="N">No</option>
                 </select></td>
                 <td><button class="bet-btn" type="submit"">Bet</button></td>
                 </form>
