--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -35,5 +35,15 @@
         <input name="bet_id" type="number" placeholder="bet_id">
         <button type="submit">Distribute</button>
     </form>
+    <label for="AddBet">Adding Bets</label>
+    <form name="AddBet" action="/Bets/AddBet" method="POST">
+        <input type="text" placeholder="Bet Name" name="betName">
+        <select name="category" id="category">
+            <option value="Placement">Placement</option>
+            <option value="Qualification">Qualification</option>
+            <option value="5050">50/50</option>
+        </select>
+        <button type="submit">Add Bet</button>
+    </form>
 </body>
 </html>
