--- a/views/BetInfo.ejs
+++ b/views/BetInfo.ejs
@@ -37,11 +37,15 @@
     <div class="tabs">
       <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
       <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
-      <a class='tab-head' id='new' href="/5050"> 50/50 </a>
+      <a class='tab-head' id='new' href="/5050"> YES/NO </a>
+      <a class="tab-head" id="pitstop" href="/pitstops">PIT STOPS</a>
       <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
   </div>
   </div>
-  <div class="betstats">
+  <div class="betstats" style="text-align: center;">
+    <% if (betCategory == "none") { %> 
+      <div style="font-size: 25px; margin-top: 10px;" >No Bet Has Been Made</div>
+    <% } %> 
     <table class="center bet-info-table" style="margin-top: 20px;">
         <tr class="table-head">
             <th>Driver Name</th>
@@ -49,13 +53,24 @@
             <th>Bet Amount</th>
             <th>% of Pool</th>
         </tr>
-        <% for (let key in drivers) { %> 
-        <tr class="table-row">
-            <td><%- key %> </td>
-            <td><meter class="percent-bar" min="0" max="1" value='<%= (drivers[key]/totalBets)%>'> <%- ((drivers[key]/totalBets) * 100).toFixed(3) %> </meter> <%- ((drivers[key]/totalBets) * 100).toFixed(2) %>% </td>
-            <td>$<%- amount[key] %> </td>
-            <td><meter class="percent-bar" min="0" max="1" value='<%= (amount[key]/betAmount)%>'> <%- ((amount[key]/betAmount) * 100).toFixed(2) %> </meter> <%- ((amount[key]/betAmount) * 100).toFixed(2) %> % </td>
-        </tr>
+        <% if (betCategory == "drivers") { %> 
+          <% for (let key in drivers) { %> 
+            <tr class="table-row">
+                <td><%- key %> </td>
+                <td><meter class="percent-bar" min="0" max="1" value='<%= (drivers[key]/totalBets)%>'> <%- ((drivers[key]/totalBets) * 100).toFixed(3) %> </meter> <%- ((drivers[key]/totalBets) * 100).toFixed(2) %>% </td>
+                <td>$<%- amount[key] %> </td>
+                <td><meter class="percent-bar" min="0" max="1" value='<%= (amount[key]/betAmount)%>'> <%- ((amount[key]/betAmount) * 100).toFixed(2) %> </meter> <%- ((amount[key]/betAmount) * 100).toFixed(2) %> % </td>
+            </tr>
+          <% } %> 
+        <% } else if (betCategory == "yesno") { %>
+          <% for (let key in yesno) { %> 
+            <tr class="table-row">
+              <td><%- key %> </td>
+              <td><meter class="percent-bar" min="0" max="1" value='<%= (yesno[key]/totalBets)%>'> <%- ((yesno[key]/totalBets) * 100).toFixed(3) %> </meter> <%- ((yesno[key]/totalBets) * 100).toFixed(2) %>% </td>
+              <td>$<%- yesnoAmount[key] %> </td>
+              <td><meter class="percent-bar" min="0" max="1" value='<%= (yesnoAmount[key]/betAmount)%>'> <%- ((yesnoAmount[key]/betAmount) * 100).toFixed(2) %> </meter> <%- ((yesnoAmount[key]/betAmount) * 100).toFixed(2) %> % </td>
+            </tr>
+          <% } %> 
         <% } %> 
     </table>
   </div>
