--- a/views/LeagueOverview.ejs
+++ b/views/LeagueOverview.ejs
@@ -37,7 +37,8 @@
     <div class="tabs">
       <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
       <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
-      <a class='tab-head' id='new' href="/5050"> 50/50 </a>
+      <a class='tab-head' id='new' href="/5050"> YES/NO </a>
+      <a class="tab-head" id="pitstop" href="/pitstops">PIT STOPS</a>
       <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
     </div>
   </div>
