--- a/views/Qualification.ejs
+++ b/views/Qualification.ejs
@@ -52,10 +52,11 @@
   </div>
   <div class="tabs-bar">
     <div class="tabs">
-        <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
-        <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
-        <a class='tab-head' id='new' href="/5050"> 50/50 </a>
-        <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
+      <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
+      <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
+      <a class='tab-head' id='new' href="/5050"> YES/NO </a>
+      <a class="tab-head" id="pitstop" href="/pitstops">PIT STOPS</a>
+      <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
     </div>
   </div>
   <div class="bet-box">
@@ -78,9 +79,9 @@
             <td>Options</td>
             <th></th>
         </tr>
-        <% for (let i = 20; i < 40; i++) { %> 
+        <% for (let i = 0; i < bets.length; i++) { %> 
             <tr class="table-row">
-                <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- i - 19 %> </td>
+                <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- i + 1 %> </td>
                 <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- bets[i].BetName %> </td>
                 <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- bets[i].Category %> </td>
                 <% if (placedBets.indexOf(bets[i].bet_id) < 0) { %> 
