--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -42,6 +42,7 @@
             <option value="Placement">Placement</option>
             <option value="Qualification">Qualification</option>
             <option value="5050">50/50</option>
+            <option value="Pitstops">Pit Stop</option>
         </select>
         <button type="submit">Add Bet</button>
     </form>
