--- a/views/BetInfo.ejs
+++ b/views/BetInfo.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
     <title>My Leagues</title>
 </head>
 <body>
@@ -35,10 +35,10 @@
   </div>
   <div class="tabs-bar">
     <div class="tabs">
-      <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
-      <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
-      <a class='tab-head' id='new' href="/5050"> YES/NO </a>
-      <a class="tab-head" id="pitstop" href="/pitstops">PIT STOPS</a>
+      <a class='tab-head' id='popular' href="/bets/Placement"> PLACEMENT </a> 
+      <a class='tab-head' id='trending' href="/bets/Qualification" > QUALIFICATION </a>
+      <a class='tab-head' id='new' href="/bets/5050"> YES/NO </a>
+      <a class="tab-head" id="pitstop" href="/bets/Pitstops">PIT STOPS</a>
       <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
   </div>
   </div>
@@ -71,7 +71,16 @@
               <td><meter class="percent-bar" min="0" max="1" value='<%= (yesnoAmount[key]/betAmount)%>'> <%- ((yesnoAmount[key]/betAmount) * 100).toFixed(2) %> </meter> <%- ((yesnoAmount[key]/betAmount) * 100).toFixed(2) %> % </td>
             </tr>
           <% } %> 
-        <% } %> 
+        <% } else if (betCategory == "pitstops") { %>
+          <% for (let key in pitstops) { %> 
+          <tr class="table-row">
+            <td><%- key %> </td>
+            <td><meter class="percent-bar" min="0" max="1" value='<%= (pitstops[key]/totalBets)%>'> <%- ((pitstops[key]/totalBets) * 100).toFixed(3) %> </meter> <%- ((pitstops[key]/totalBets) * 100).toFixed(2) %>% </td>
+            <td>$<%- pitstops[key] %> </td>
+            <td><meter class="percent-bar" min="0" max="1" value='<%= (pitstopsAmount[key]/betAmount)%>'> <%- ((pitstopsAmount[key]/betAmount) * 100).toFixed(2) %> </meter> <%- ((pitstopsAmount[key]/betAmount) * 100).toFixed(2) %> % </td>
+          </tr>
+          <% } %> 
+        <% } %>  
     </table>
   </div>
 </body>
