--- a/views/Pitstops.ejs
+++ b/views/Pitstops.ejs
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../../../assets/css/style.css">
     <title>My Leagues</title>
     <script>
-        function getBetStats(bet_id){
+        function getBetStats(bet_id, betCategory){
             console.log(bet_id)
+            console.log(betCategory)
             fetch('/Bets/BetInfo', {
                 method: 'POST',
-                body: JSON.stringify({bet_id}),
+                body: JSON.stringify({bet_id, betCategory}),
                 headers: {'Content-Type': 'application/json'}
             })
             .then((response) => {
@@ -52,10 +53,10 @@
   </div>
   <div class="tabs-bar">
     <div class="tabs">
-      <a class='tab-head' id='popular' href="/bets"> PLACEMENT </a> 
-      <a class='tab-head' id='trending' href="/qualification" > QUALIFICATION </a>
-      <a class='tab-head' id='new' href="/5050"> YES/NO </a>
-      <a class="tab-head" id="pitstop" href="/pitstops">PIT STOPS</a>
+      <a class='tab-head' id='popular' href="/bets/Placement"> PLACEMENT </a> 
+      <a class='tab-head' id='trending' href="/bets/Qualification" > QUALIFICATION </a>
+      <a class='tab-head' id='new' href="/bets/5050"> YES/NO </a>
+      <a class="tab-head" id="pitstop" href="/bets/Pitstops">PIT STOPS</a>
       <a class="tab-head" id='create' href="/leagues"> MY LEAGUE </a>
     </div>
   </div>
@@ -73,42 +74,26 @@
     <table class="center bet-table">
         <tr class="table-head">
             <th style="width: 5%;">No.</th>
-            <th style="width: 30%;">Bet Name</th>
+            <th style="width: 30%;">Driver Name</th>
             <th style="width: 15%;">Bet Category</th>
             <td>Bet Amount</td>
-            <td>Options</td>
+            <td>No. of Pit Stops</td>
             <th></th>
         </tr>
         <% for (let i = 0; i < bets.length; i++) { %> 
             <tr class="table-row">
-                <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- i + 1 %> </td>
-                <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- bets[i].BetName %> </td>
-                <td onclick="getBetStats(`<%- bets[i].bet_id %>`);"><%- bets[i].Category %> </td>
+                <td onclick="getBetStats(`<%- bets[i].bet_id %>`, `<%- bets[i].Category %>`);"><%- i + 1 %> </td>
+                <td onclick="getBetStats(`<%- bets[i].bet_id %>`, `<%- bets[i].Category %>`);"><%- bets[i].BetName %> </td>
+                <td onclick="getBetStats(`<%- bets[i].bet_id %>`, `<%- bets[i].Category %>`);"><%- bets[i].Category %> </td>
                 <% if (placedBets.indexOf(bets[i].bet_id) < 0) { %> 
-                <form action="/Bets/PlaceBet/<%- bets[i].bet_id %>" method="POST">
+                <form action="/Bets/PlaceBet/<%- bets[i].bet_id%>/<%- bets[i].Category %>" method="POST">
                 <td><input id="betAmount" name="betAmount" type="number" placeholder="amount" required></td>
                 <td><select id="driver" name="driver" class="bet-selection" required>
                     <option value="" disabled selected hidden>Select a Driver</option>
-                    <option value="Max Verstappen">Max Verstappen</option>
-                    <option value="Sergio Perez">Sergio Perez</option>
-                    <option value="Charles Leclerc">Charles Leclerc</option>
-                    <option value="Carlos Sainz">Carlos Sainz</option>
-                    <option value="Lewis Hamilton">Lewis Hamilton</option>
-                    <option value="George Russel">George Russel</option>
-                    <option value="Lando Norris">Lando Norris</option>
-                    <option value="Oscar Piastri">Oscar Piastri</option>
-                    <option value="Pierre Gasly">Pierre Gasly</option>
-                    <option value="Esteban Ocon">Esteban Ocon</option>
-                    <option value="Fernando Alonso">Fernando Alonso</option>
-                    <option value="Lance Stroll">Lance Stroll</option>
-                    <option value="Valteri Bottas">Valteri Bottas</option>
-                    <option value="Zhou Guanyu">Zhou Guanyu</option>
-                    <option value="Kevin Magnussen">Kevin Magnussen</option>
-                    <option value="Nico Hulkenberg">Nico Hulkenberg</option>
-                    <option value="Nick De Vries">Nick De Vries</option>
-                    <option value="Yuki Tsunoda">Yuki Tsunoda</option>
-                    <option value="Alex Albon">Alex Albon</option>
-                    <option value="Logan Sargeant">Logan Sargeant</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
                 </select></td>
                 <td><button class="bet-btn" type="submit"">Bet</button></td>
                 </form>
