added home page pictures for races

--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -46,5 +46,12 @@
         </select>
         <button type="submit">Add Bet</button>
     </form>
+
+    <form action="/Admin/SendMail" method="POST">
+        <button type="submit">Send Mail</button>
+    </form>
+    <form action="/Admin/CreateCrypt" method="POST">
+        <button type="submit">Create Crypt</button>
+    </form>
 </body>
 </html>
