--- a/views/Registration.ejs
+++ b/views/Registration.ejs
@@ -17,7 +17,8 @@
         </div>
     </div>
     <div class="header-div-bar">
-        <p class="bar-text" >Register</p>
+        <a class="bar-text" href="/login">Sign In</a>
+        <a class="bar-text" href="/registration" style="background-color: black;">Register</a>
     </div>
     <div class="register-form-box">
         <div class="form-header">
