--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Michroma&family=Titillium+Web:wght@400;700&display=swap');
+
 :root {
   --redbull: color: #fff;
   --ferrari: color: #FF0000;
@@ -8,6 +9,7 @@
 
 * {
   font-family: 'Titillium Web', sans-serif;
+  font-weight: 400;
 }
 
 body {
@@ -43,10 +45,9 @@ body {
   justify-content: space-between;
   height: 150px;
   width: 100%;
-  padding-left: 200px;
-  padding-right: 200px;
   align-items: center;
   margin: 0px;
+  padding-left: 200px;
   background-color: rgb(32, 32, 32);
 }
 
@@ -78,15 +79,20 @@ body {
   width: 100%;
   height: 50px;
   background-color: rgb(60, 60, 60);
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .bar-text {
-  margin: 0px;
-  padding-top: 5px;
   color: white;
   font-weight: bold;
   font-size: 24px;
+  height: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-decoration: none;
 }
 
 .register-form-box,
@@ -283,11 +289,14 @@ select {
   border: solid;
   border-radius: 10px;
   border-width: 1px;
-  border-color: rgb(138, 138, 138);
+  border-color: rgb(88, 88, 88);
   display: flex;
   flex-direction: column;
   justify-content: end;
   align-items: center;
+  position: absolute;
+  top: 200px;
+  z-index: 1;
 }
 
 .hole {
@@ -502,3 +511,96 @@ input::-webkit-inner-spin-button {
 .percent-bar::-webkit-meter-optimum-value {
     background: rgb(16, 195, 255)
 }
+
+.race-info {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(70, 70, 70);
+  overflow: hidden;
+}
+
+.upcoming-race,
+.next-races {
+  border-style: none;
+  height: 550px;
+  width: 100%;
+  overflow: hidden;
+  transition: .2s;
+}
+
+.upcoming-race:hover,
+.next-races:hover{
+  transform:scale(1.2);
+  transition: .2s;
+  text-decoration: underline;
+  text-decoration-color: white;
+}
+
+.race-description {
+  background-color: white;
+  width: 600px;
+  height: 240px;
+
+}
+
+.race-description > h1 {
+  margin: 0px;
+}
+
+.overlay {
+  height: 550px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  transition: .2s;
+}
+
+.overlay:hover{
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.2);;
+}
+
+
+.title-box {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-family: 'Michroma', sans-serif;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-box > h1{
+  font-size: 40px;
+  margin: 0px;
+}
+
+.title-box > .date-box > h2 {
+  font-size: 14px;
+  margin: 0px;
+}
+
+.date-box {
+  height: 30px;
+  width: 85px;
+  background-color: rgba(47, 47, 47, .9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+
+.container {
+  width: 50%;
+  overflow: hidden;
+}
+
+.race-name {
+  font-weight: 700;
+}
+
+
+
