--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -17,7 +17,8 @@
         </div>
     </div>
     <div class="header-div-bar">
-        <p class="bar-text" class="header-logo" >Sign In</p>
+        <a class="bar-text" href="/login" style="background-color: black;">Sign In</a>
+        <a class="bar-text" href="/registration">Register</a>
     </div>
     <div class="register-form-box">
         <div class="form-header">
@@ -31,6 +32,9 @@
                 <input type="password" name="password" placeholder="Password" minlength="8" maxlength="20" required>
                 <button type="submit" class="header-btn register-btn">Sign In</button>
             </form>
+            <% if (errorMessage) {%> 
+                <div class="error-message"><%= errorMessage %></div>
+            <% } %> 
         </div>
     </div>
 </body>
