--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -124,8 +124,10 @@ body {
 }
 
 .form > input,
+#leagueSearch,
 .form > select,
-select {
+select,
+.league-password > input {
   height: 45px;
   width: auto;
   border-radius: 15px;
@@ -337,12 +339,62 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 20px;
   height: 80px;
   background-color: rgb(224, 224, 224);
 }
 
-.league-bar > form > input,
+#leagueSearch {
+  margin-left: 75px;
+  width: 500px;
+}
+
+#league-overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(47, 47, 47, .9);
+  display: none;
+  justify-content: center;
+}
+
+.league-password {
+  margin-top: 200px;
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.league-password > input {
+  width: 200px;
+}
+
+.league-password > button {
+  border: none;
+  border-width: 1px;
+  height: 40px;
+  width: 150px;
+  border-radius: 5px;
+  font-size: 14px;
+  color: white;
+  background-color: rgb(255, 17, 0);
+}
+
+.league-password > button:hover {
+  background-color:  white;
+  border-style: solid;
+  border-color: rgb(255, 17, 0);
+  color: rgb(255, 17, 0);
+  transition: .2s;
+  cursor: pointer;
+}
+
 #myInput {
   height: 36px;
   width: 500px;
@@ -458,6 +510,8 @@ table.center {
 .bet-table {
   font-size: 14px;
   width: 1200px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .bet-selection {
