--- a/views/LeagueIndex.ejs
+++ b/views/LeagueIndex.ejs
@@ -117,7 +117,7 @@
     <form action="/LeagueCreateForm" method="GET">
         <button class="league-btn">Create League</button>
     </form>
-    <input type="text" name="leagueSearch" id="leagueSearch">
+    <input type="text" name="leagueSearch" id="leagueSearch" placeholder="League Name" onsubmit="joinLeague()">
     <button class="league-btn" type="button" onclick="joinLeague()">Search Leagues</button>
   </div>
     <div class="index-box">
