--- a/views/Qualification.ejs
+++ b/views/Qualification.ejs
@@ -91,11 +91,11 @@
                 <td><select id="driver" name="driver" class="bet-selection" required>
                     <option value="" disabled selected hidden>Select a Driver</option>
                     <option value="Max Verstappen">Max Verstappen</option>
-                    <option value="Sergio Perez">Sergio Perez</option>
+                    <option value="Sergio Pérez">Sergio Perez</option>
                     <option value="Charles Leclerc">Charles Leclerc</option>
                     <option value="Carlos Sainz">Carlos Sainz</option>
                     <option value="Lewis Hamilton">Lewis Hamilton</option>
-                    <option value="George Russel">George Russel</option>
+                    <option value="George Russell">George Russel</option>
                     <option value="Lando Norris">Lando Norris</option>
                     <option value="Oscar Piastri">Oscar Piastri</option>
                     <option value="Pierre Gasly">Pierre Gasly</option>
@@ -105,7 +105,7 @@
                     <option value="Valteri Bottas">Valteri Bottas</option>
                     <option value="Zhou Guanyu">Zhou Guanyu</option>
                     <option value="Kevin Magnussen">Kevin Magnussen</option>
-                    <option value="Nico Hulkenberg">Nico Hulkenberg</option>
+                    <option value="Nico Hülkenberg">Nico Hulkenberg</option>
                     <option value="Nick De Vries">Nick De Vries</option>
                     <option value="Yuki Tsunoda">Yuki Tsunoda</option>
                     <option value="Alex Albon">Alex Albon</option>
