--- a/views/LeagueOverview.ejs
+++ b/views/LeagueOverview.ejs
@@ -8,7 +8,7 @@
     <title>My Leagues</title>
     <script>
       function getUserBets(user_id){
-        window.location.href = `https://localhost:8080/UserInfo/${user_id}`;
+        window.location.href = `https://racegambit.com/UserInfo/${user_id}`;
       }
     </script>
 </head>
