--- a/views/LeagueOverview.ejs
+++ b/views/LeagueOverview.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>My Leagues</title>
+    <title>League Overview</title>
     <script>
       function getUserBets(user_id){
         window.location.href = `https://racegambit.com/UserInfo/${user_id}`;
