added clearing bets, distributing wins, unlocking bets;

--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -19,7 +19,6 @@
     </form>
     <label for="pitdistro">Distribute Winnings for Pitstops</label>
     <form action="" name="pitdistro">
-        
     </form>
 
     <label for="AddBet">Adding Bets</label>
@@ -42,6 +41,12 @@
     </form>
     <form action="/Bets/DistributeWinnings/Placement" method="POST">
         <button type="submit">Distribute Winnings</button>
+    </form>
+    <form action="/Bets/UnlockBets" method="POST">
+        <button type="submit">Unlock Bets</button>
+    </form>
+    <form action="/Bets/ClearBets" method="POST">
+        <button type="submit">Clear Bets</button>
     </form>
 </body>
 </html>
