added auto updating landing page for previous and upcoming races using API calls

--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -48,5 +48,8 @@
     <form action="/Bets/ClearBets" method="POST">
         <button type="submit">Clear Bets</button>
     </form>
+    <form action="/Bets/testDate" method="POST">
+        <button type="submit">Get Race Date</button>
+    </form>
 </body>
 </html>
